display all matters done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <input type="text" name="note" id="note" placeholder="8">
                     </div>
                     <div><label for="choose-matter">Matière : </label>
-                        <select name="choose-matter" id="choose-matter">
+                        <select name="choose-matter" id="choose-matter1">
                             <option value="">--Sélectionner une matière--</option>
                             <option value="math">Mathématiques</option>
                         </select></div>
@@ -80,9 +80,8 @@
                 </div>
                 <div class="display-inline">
                     <label for="choose-matter">Matières : </label>
-                    <select name="choose-matter" id="choose-matter">
-                        <option value="">Toutes mes matières</option>
-                        <option value="1"></option>
+                    <select name="choose-matter" id="choose-matter2">
+
                     </select>
                 </div>
             </div>
